--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/core": "^6.0.0",
     "@capacitor/ios": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
+    "@capacitor/toast": "^6.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@lordicon/react": "^1.6.0",
     "@nextui-org/react": "^2.2.10",
@@ -52,6 +53,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
